update NewPipe Extractor from v0.25.2 to v0.26.2
- Replace source files with upstream v0.26.2 content
- Update dependency versions (protobuf 4.35.0, jsoup 1.22.2, etc.)
- Preserve local build customizations (disabled tests, Java 21 toolchain)
- Handle MediaCapability List->Set breaking change (no app impact)
- Add ExtractorLogger utility class (no app integration needed)
- Fix YouTube duration extraction, lockup view model parsing
- Fix SoundCloud 64-bit track IDs and comments crash